Updated icons styling in window manager. Added predefined icons to notifications manager. Fixed alignment issue of close button in toast component.

--- a/src/Components/Toast/kiwi-toast/kiwi-toast.scss
+++ b/src/Components/Toast/kiwi-toast/kiwi-toast.scss
@@ -96,6 +96,11 @@
 	}
 }
 
+:host([subtitle]:not([title])) #close-icon,
+:host([title]:not([subtitle])) #close-icon {
+	align-self: center;
+}
+
 :host([closemode]:not([closemode="icon"])) #close-icon {
 	display: none;
 }
